--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ ltmain.sh
 missing
 m4
 stamp-h1
+compile
 
 # Targets
 src/compiler/protoc-gen-objc
@@ -33,3 +34,4 @@ Build/
 *.perspectivev3
 *.mode1v3
 *.mode2v3
+xcuserdata/
